fix overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -2089,6 +2089,8 @@ body.admin-bar .header-menu-area.sticky_menu {
   margin-bottom: 25px; }
   .post-template-default.postid-51 .blog-details-wrapper .single-post-item .post-content p:last-child {
     margin-bottom: 0; }
+.post-template-default.postid-1163 .blog-details-wrapper .single-post-item .post-content .wp-caption {
+  margin-top: 20px; }
 
 @keyframes MovefadeUp {
   0% {
