--- a/sass/_unittest.scss
+++ b/sass/_unittest.scss
@@ -667,9 +667,6 @@ body {
   }
   &.postid-51 {
     .blog-details-wrapper {
-      //.post-comments {
-      //  margin-top: 94px;
-      //}
       .single-post-item .post-content {
         margin-bottom: 25px;
         p {
@@ -680,11 +677,13 @@ body {
       }
     }
   }
-  //&.postid-34 {
-  //  .blog-details-wrapper {
-  //    .comment-respond {
-  //      margin-top: 80px;
-  //    }
-  //  }
-  //}
+  &.postid-1163 {
+    .blog-details-wrapper {
+      .single-post-item .post-content {
+        .wp-caption {
+          margin-top: 20px;
+        }
+      }
+    }
+  }
 }
